--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>PortfolioPage</title>
-  <base href="https://github.com/gilStettler/portfolio-page/">
+  <base href="/portfolio-page/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>html{margin:0;padding:0;box-sizing:border-box;background-color:#f8f7f5;font-family:Arial,sans-serif;font-size:1.5rem;background:radial-gradient(#e8e6e4 1px,#f8f7f5 1px);background-size:20px 20px}body{margin:0}@media (min-width: 768px){html{overflow-x:hidden}}</style><link rel="stylesheet" href="styles-MRQWOVYI.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-MRQWOVYI.css"></noscript></head>
